<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".jobsinfo">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="15dp"
        android:src="@drawable/jobinfo" />

    <TextView
        android:layout_margin="8dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jobinfo1"
        android:background="@color/yo"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textScaleX="1"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jobinfo2"
        android:textSize="18dp"
        android:padding="10dp"
        android:textStyle="italic"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jobinfo3"
        android:textColor="@color/teal_700"
        android:textSize="15dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/jobinfo4"
        android:textColor="@color/bg"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/jobinfo5"
        android:textColor="@color/bg"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jobinfo6"
        android:textSize="15dp"
        android:textColor="@color/bg"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jobinfo7"
        android:textSize="15dp"
        android:textColor="@color/bg"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jobinfo8"
        android:textSize="15dp"
        android:textColor="@color/bg"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jobinfo9"
        android:textSize="15dp"
        android:textColor="@color/bg"
        android:layout_marginLeft="30dp"
        /><TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/jobinfo10"
    android:textSize="15dp"
    android:textColor="@color/bg"
    android:layout_marginLeft="30dp"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jobinfo11"
        android:textSize="15dp"
        android:textColor="@color/bg"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jobinfo12"
        android:textSize="15dp"
        android:textColor="@color/bg"
        android:layout_marginLeft="30dp"
        /><TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/jobinfo13"
    android:textSize="15dp"
    android:textColor="@color/bg"
    android:layout_marginLeft="30dp"
    />

<Button
    android:layout_width="match_parent"
    android:layout_height="50dp"
android:gravity="center"
    android:text="APPLY NOW"
    android:textColor="@color/red"
    style="@style/CardView.Light"
    android:layout_margin="10dp"
    />

</LinearLayout>
</ScrollView>