<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity2">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:padding="5dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout
android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:background="@color/bgj"
    android:layout_height="wrap_content">

    <TextView

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:text="@string/job1"
    android:textStyle="bold"
        android:textScaleX="1"
    android:textSize="18dp"
    android:textColor="@color/white"
    />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/job2"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/jobc"
        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/job3"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/jobc"
        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/job4"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/jobc"  />
    <Button
        android:id="@+id/id"
        android:layout_width="150dp"
        android:paddingTop="5dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="APPLY ONLINE"
        android:background="@color/apply"
        style="@android:style/Animation"
    />

</LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:background="@color/bgj"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/job2_1"
            android:textStyle="bold"
            android:textScaleX="1"
            android:textSize="18dp"
            android:textColor="@color/white"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/job2_2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/jobc"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/job2_3"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/jobc"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/job2_4"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/jobc"  />
        <Button

            android:layout_width="150dp"
            android:paddingTop="5dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="APPLY ONLINE"
            android:background="@color/apply"
            style="@android:style/Animation"
            />

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:background="@color/bgj"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/job3_1"
            android:textStyle="bold"
            android:textScaleX="1"
            android:textSize="18dp"
            android:textColor="@color/white"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/job3_2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/jobc"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/job3_3"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/jobc"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/job3_4"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/jobc"  />
        <Button

            android:layout_width="150dp"
            android:paddingTop="5dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="APPLY ONLINE"
            android:background="@color/apply"
            style="@android:style/Animation"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:background="@color/bgj"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/job4_1"
            android:textStyle="bold"
            android:textScaleX="1"
            android:textSize="18dp"
            android:textColor="@color/white"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/job4_2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/jobc"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/job4_3"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/jobc"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/job4_4"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/jobc"  />
        <Button

            android:layout_width="150dp"
            android:paddingTop="5dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="APPLY ONLINE"
            android:background="@color/apply"
            style="@android:style/Animation"
            />

    </LinearLayout>


</LinearLayout>



</ScrollView>